# tedxfargo-charge-sign

./: .gitignore  README.md  build.sh  build_board.sh  build_pieces.sh  build_rest.sh
led-sign-builder/: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
led-sign-builder/docs/: DESIGN-NOTES.md  LESSONS-FROM-CHARGE.md  QA-BASELINE.md
led-sign-builder/docs/gallery/: README.md
led-sign-builder/docs/plans/: 2026-07-06-implementation.md
led-sign-builder/docs/specs/: 2026-07-06-led-sign-builder-design.md  (+1 more)
led-sign-builder/examples/: README-art.md  README.md  channel-bold.json  charge-replica.json  halo-backlit.json  mini-desk.json  neon-classic.json
led-sign-builder/scripts/: make_gallery.py  qa_gold.py  qa_kit.py  qa_upload.py
led-sign-builder/signforge/: __init__.py  cli.py  corridors.py  coupons.py  geom2d.py  layout.py  leds.py  model.py  panelize.py  params.py  pipeline.py  plaques.py  skeleton.py  solids.py  textures.py  tubes.py  verify.py
led-sign-builder/tests/: conftest.py  test_bed_fit.py  test_catalog.py  test_channel_parts.py  test_charge_parity.py  test_corridors.py  test_coupons.py  test_e2e_channel.py  test_examples.py  test_font_library.py  test_fonts.py  test_formats.py  test_geom2d.py  test_halo.py  test_layout.py  test_leds.py  test_neon.py  test_panelize.py  test_params.py  test_plating_law.py  test_png_preview.py  test_skeleton.py  test_smoke.py  test_solids.py  test_stl.py  test_textures.py  test_threemf.py  test_torture.py  test_users_queue.py  test_verify.py  test_viewer.py  test_web.py  test_wiring.py  test_wled.py
(+226 files in other folders)
