[project]
name = "signforge"
version = "0.1.0"
description = "LED Sign Builder — turn text, fonts, and vector art into print-ready multi-material LED sign kits"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.26",
  "shapely>=2.0.4",
  "manifold3d>=2.5",
  "fonttools[woff]>=4.50",
  "svgelements>=1.9",
  "ezdxf>=1.2",
  "pillow>=10",
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
signforge = "signforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["signforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = ["slow: full torture-sweep builds (run with -m slow)"]
